--- a/minetest.conf
+++ b/minetest.conf
@@ -4,3 +4,6 @@ bind_address = 0.0.0.0
 server_address = 18.222.131.131
 
 port = 30000
+
+secure.enable_security = false
+secure.trusted_mods = "mineufba-mods","mineufba-tools"
